--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\alino\\.conda\\envs\\tf-gpu-cuda8\\python.exe"
+    "python.pythonPath": "C:\\Users\\alino\\.conda\\envs\\infoRet\\python.exe"
 }
